Update gabung/readme.html via Web Editor

--- a/gabung/readme.html
+++ b/gabung/readme.html
@@ -1,1 +1,1 @@
-bacaan saja, coba ini sudah sampai gabung bahkan auto ke readme
+bacaan saja, coba ini sudah sampai gabung bahkan auto ke readme beberapa tombol hilang
